Sync'ed ClientApp to original sample

--- a/dotnetcore-angular8/Blog/ClientApp/src/app/blog-post/blog-post.component.html
+++ b/dotnetcore-angular8/Blog/ClientApp/src/app/blog-post/blog-post.component.html
@@ -4,7 +4,7 @@
   <div>{{ blogPost.body }}</div>
   <ul>
     <li>{{ blogPost.creator }}</li>
-    <li>{{ blogPost.dt }}</li>
+    <li>{{ blogPost.dt | date: "dd.MM.y" }}</li>
   </ul>
 
 </ng-container>
