--- a/dotnetcore-angular8/Blog/ClientApp/src/app/blog-posts/blog-posts.component.html
+++ b/dotnetcore-angular8/Blog/ClientApp/src/app/blog-posts/blog-posts.component.html
@@ -22,7 +22,8 @@
       <td><a [routerLink]="['/blogpost/', blogPost.postId]">{{ blogPost.title }}</a></td>
       <td>{{ blogPost.creator }}</td>
       <td>{{ blogPost.dt | date: "dd.MM.y" }}</td>
-      <td><a [routerLink]="['/blogpost/edit/', blogPost.postId]" class="btn btn-primary btn-sm float-right">Edit</a></td>
+      <td><a [routerLink]="['/blogpost/edit/', blogPost.postId]" class="btn btn-primary btn-sm float-right">Edit</a>
+      </td>
       <td><a [routerLink]="" (click)="delete(blogPost.postId)" class="btn btn-danger btn-sm float-right">Delete</a></td>
     </tr>
   </tbody>
